# mipt-aslab-cpp

./: .clang-format  .gitmodules  CMakeCache.txt  README.md
02-geometry/01-hw3d/: CMakeLists.txt  README.md
02-geometry/01-hw3d/lib/: CMakeLists.txt
02-geometry/01-hw3d/lib/include/: equal.hpp  point2.hpp  point3.hpp  segment1.hpp  vec2.hpp  vec3.hpp
02-geometry/01-hw3d/lib/include/broadphase/: broadphase_structure.hpp  bruteforce.hpp  octree.hpp  uniform_grid.hpp
02-geometry/01-hw3d/lib/include/narrowphase/: aabb.hpp  collision_shape.hpp  triangletriangle.hpp
02-geometry/01-hw3d/lib/include/primitives/: aabb.hpp  collision_shape.hpp  plane.hpp  segment.hpp  segment1.hpp  segment2.hpp  segment3.hpp  triangle.hpp  triangle2.hpp  triangle3.hpp
02-geometry/01-hw3d/lib/test/: test_aabb.cc  test_equal.cc  test_plane.cc  test_point2.cc  test_point3.cc  test_segment.cc  test_segment1.cc  test_segment2.cc  test_segment3.cc  test_triangle.cc  test_triangle2.cc  test_triangle3.cc  test_vec.cc  test_vec2.cc  test_vec3.cc
02-geometry/01-hw3d/test/: CMakeLists.txt
03-trees/04-kd-tree/: CMakeLists.txt  README.md
03-trees/04-kd-tree/lib/: CMakeLists.txt
03-trees/04-kd-tree/test/: CMakeLists.txt
03-trees/04-kd-tree/test/closest/: CMakeLists.txt  test.sh  testgen.py
03-trees/04-kd-tree/test/closest/src/: closest.cc  onedim.cc
hwc/: CMakeLists.txt
hwc/lib/include/: belady.hpp  caches.hpp  lfu.hpp  lfuda.hpp  stl_lfu.hpp
hwc/test/: CMakeLists.txt
hwc/test/belady/: CMakeLists.txt  config.json
hwc/test/belady/src/: belady.cc
hwc/test/lfuc/: CMakeLists.txt  gentest.py
hwc/test/lfuc/src/: lfuc.cc
hwc/test/lfudac/: CMakeLists.txt
hwc/test/src/: lfudac.cc
hwt/: CMakeLists.txt
hwt/lib/: CMakeLists.txt
hwt/lib/include/: order_statistic_set.hpp  ranged_set.hpp
hwt/lib/src/: rb_tree_ranged.cc  rb_tree_ranged.hpp
hwt/lib/test/: test_private.cc
(+30 files in other folders)
